feat: implementa endpoint criação de gps
- Cria endpoint de GPS para registrar dados de GPS
- Implementa entidade GPS e seus testes unitários
- Desenvolve GPSRepository com testes de integração
- Adiciona GPSHandler e DTOs relacionados (CreateGPSInputDTO, GPSOutputDTO)
- Implementa error_handler.go para tratamento centralizado de erros
- Ajusta WebServer para roteamento de URI correto
- Atualiza main.go para incluir novo handler de GPS
- Cria arquivos .http para testes de API
- Refatora as structs GPS e Gyroscope para usar device como composição
- Adiciona nova tabela de GPS aos scripts de migração
