# internal/web/gyroscope_handler.go
@@ -34,9 +34,9 @@ func NewGyroscopeHandler(
 // @Success     201
 // @Failure     500			{object}	Error
 // @Failure     400			{object}	Error
-// @Router      /gyroscopes	[post]
+// @Router      /gyroscope	[post]
 func (h *GyroscopeHandler) Create(w http.ResponseWriter, r *http.Request) {
-	fmt.Println("Received request to /gyroscopes")
+	fmt.Println("Received request to /gyroscope")
 
 	var dto dto2.CreateGyroscopeInputDTO
 	err := json.NewDecoder(r.Body).Decode(&dto)
@@ -50,7 +50,16 @@ func (h *GyroscopeHandler) Create(w http.ResponseWriter, r *http.Request) {
 	output, err := h.CreateGyroscopeUseCase.Execute(dto)
 	if err != nil {
 		fmt.Println("Error executing create gyroscope usecase: ", err)
-		HandleError(w, err)
+		validationErrors := map[string]bool{
+			"invalid id":           true,
+			"name cannot be empty": true,
+			"name cannot be longer than 100 characters": true,
+			"model cannot be empty":                     true,
+			"model cannot be longer than 50 characters": true,
+			"MAC address cannot be empty":               true,
+			"invalid MAC address format":                true,
+		}
+		HandleError(w, err, validationErrors)
 		return
 	}
 
@@ -66,28 +75,29 @@ func (h *GyroscopeHandler) Create(w http.ResponseWriter, r *http.Request) {
 	fmt.Println("Gyroscope created successfully")
 }
 
-// Error represents an error response
-type Error struct {
-	Message string `json:"message"`
-}
-
-// HandleError handles the error response
-func HandleError(w http.ResponseWriter, err error) {
-	status := http.StatusInternalServerError
-	validationErrors := map[string]bool{
-		"invalid id":           true,
-		"name cannot be empty": true,
-		"name cannot be longer than 100 characters": true,
-		"model cannot be empty":                     true,
-		"model cannot be longer than 50 characters": true,
-		"MAC address cannot be empty":               true,
-		"invalid MAC address format":                true,
-	}
-
-	if validationErrors[err.Error()] {
-		status = http.StatusBadRequest
-	}
-
-	w.WriteHeader(status)
-	json.NewEncoder(w).Encode(Error{Message: err.Error()})
-}
+//
+//// Error represents an error response
+//type Error struct {
+//	Message string `json:"message"`
+//}
+//
+//// HandleError handles the error response
+//func HandleError(w http.ResponseWriter, err error) {
+//	status := http.StatusInternalServerError
+//	validationErrors := map[string]bool{
+//		"invalid id":           true,
+//		"name cannot be empty": true,
+//		"name cannot be longer than 100 characters": true,
+//		"model cannot be empty":                     true,
+//		"model cannot be longer than 50 characters": true,
+//		"MAC address cannot be empty":               true,
+//		"invalid MAC address format":                true,
+//	}
+//
+//	if validationErrors[err.Error()] {
+//		status = http.StatusBadRequest
+//	}
+//
+//	w.WriteHeader(status)
+//	json.NewEncoder(w).Encode(Error{Message: err.Error()})
+//}
